--- a/my-app/.gitignore
+++ b/my-app/.gitignore
@@ -3,13 +3,13 @@
 
 # dependencies
 /node_modules
-/public
 /.devcontainer
 /.pnp
 .pnp.js
-
+/src/images
 # testing
 /coverage
+
 
 # production
 /build
